--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -1052,4 +1052,17 @@
 	<string name="booking_filter_rating_num_very_good">8,0+</string>
 	<!-- Nine points and higher -->
 	<string name="booking_filter_rating_num_excellent">9,0+</string>
+	<!-- Simplified colour scheme for traffic information, fewer colours are used to display traffic jams on the map. The string should be kept as short as possible -->
+	<string name="pref_traffic_simplified_colors_title">Forenklede trafikfarver</string>
+	<string name="enable_logging">Aktiver logføring</string>
+	<string name="whatsnew_more_info_on_hotels_title">Flere oplysninger om hoteller</string>
+	<string name="whatsnew_more_info_on_hotels_message">Helt nyt look på hotelsider: Tjek billeder, brugeranmeldelser og andre oplysninger på nettet.</string>
+	<string name="whatsnew_better_routing_title">Forbedret ruteplanlægning</string>
+	<string name="whatsnew_better_routing_message">• Mere præcis beregning af ankomsttid.\n• App tager hensyn til utilgængelige områder og vejskilte.</string>
+	<string name="whatsnew_smaller_mwm_title">Maps er blevet mindre</string>
+	<string name="whatsnew_smaller_mwm_message">Maps kræver op til 20% mindre lager.</string>
+	<string name="whatsnew_waypoints_title">Vejpunkter i ruteføring</string>
+	<string name="whatsnew_waypoints_message">Tryk på positioner for at føje vejsteder til din rute.</string>
+	<string name="whatsnew_driving_style_title">Nyt kortformat til kørsel</string>
+	<string name="whatsnew_driving_style_message">Bilnavigationstilstand er blevet lettere at bruge.</string>
 </resources>
