--- a/android/res/values-ko/strings.xml
+++ b/android/res/values-ko/strings.xml
@@ -1044,4 +1044,17 @@
 	<string name="booking_filter_rating_num_very_good">8.0+</string>
 	<!-- Nine points and higher -->
 	<string name="booking_filter_rating_num_excellent">9.0+</string>
+	<!-- Simplified colour scheme for traffic information, fewer colours are used to display traffic jams on the map. The string should be kept as short as possible -->
+	<string name="pref_traffic_simplified_colors_title">단순화된 트래픽 색상</string>
+	<string name="enable_logging">로깅 사용</string>
+	<string name="whatsnew_more_info_on_hotels_title">호텔에 대한 자세한 정보</string>
+	<string name="whatsnew_more_info_on_hotels_message">호텔 페이지의 새로운 모습: 온라인으로 사진, 사용자 리뷰 및 기타 정보를 확인하세요.</string>
+	<string name="whatsnew_better_routing_title">향상된 경로 계획</string>
+	<string name="whatsnew_better_routing_message">• 보다 정확한 도착 시간 추정. \n• 앱이 제한 지역 및 도로 표지판을 고려합니다.</string>
+	<string name="whatsnew_smaller_mwm_title">더 작아진 지도</string>
+	<string name="whatsnew_smaller_mwm_message">지도가 저장소를 최대 20% 적게 필요로 합니다.</string>
+	<string name="whatsnew_waypoints_title">경로의 중간 지점</string>
+	<string name="whatsnew_waypoints_message">경로에 중간 지점을 추가할 위치를 탭하세요.</string>
+	<string name="whatsnew_driving_style_title">운전을 위한 새로운 지도 스타일</string>
+	<string name="whatsnew_driving_style_message">자동차 네비게이션 모드 사용이 더욱 쉬워졌습니다.</string>
 </resources>
