--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -1047,4 +1047,17 @@
 	<string name="booking_filter_rating_num_very_good">8.0+</string>
 	<!-- Nine points and higher -->
 	<string name="booking_filter_rating_num_excellent">9.0+</string>
+	<!-- Simplified colour scheme for traffic information, fewer colours are used to display traffic jams on the map. The string should be kept as short as possible -->
+	<string name="pref_traffic_simplified_colors_title">Cores de trânsito simplificadas</string>
+	<string name="enable_logging">Ativar o histórico</string>
+	<string name="whatsnew_more_info_on_hotels_title">Mais informações sobre Hotéis</string>
+	<string name="whatsnew_more_info_on_hotels_message">Novo aspeto para as páginas dos hotéis: veja fotos, comentários e outras informações on-line.</string>
+	<string name="whatsnew_better_routing_title">Planeamento de rotas melhorado</string>
+	<string name="whatsnew_better_routing_message">• Estimativa mais precisa da hora de chegada.\n• A app leva em conta as áreas restritas e os sinais de trânsito.</string>
+	<string name="whatsnew_smaller_mwm_title">Mapas Ficaram Menores</string>
+	<string name="whatsnew_smaller_mwm_message">Mapas requer até 20% menos espaço de armazenamento.</string>
+	<string name="whatsnew_waypoints_title">Pontos de caminho (waypoints) no Roteamento</string>
+	<string name="whatsnew_waypoints_message">Toque nos locais para adicionar pontos de caminho à sua rota.</string>
+	<string name="whatsnew_driving_style_title">Novo estilo de mapa para a condução</string>
+	<string name="whatsnew_driving_style_message">O modo de navegação do carro ficou mais fácil de utilizar.</string>
 </resources>
