--- a/android/res/values-sv/strings.xml
+++ b/android/res/values-sv/strings.xml
@@ -1052,4 +1052,17 @@
 	<string name="booking_filter_rating_num_very_good">8,0+</string>
 	<!-- Nine points and higher -->
 	<string name="booking_filter_rating_num_excellent">9,0+</string>
+	<!-- Simplified colour scheme for traffic information, fewer colours are used to display traffic jams on the map. The string should be kept as short as possible -->
+	<string name="pref_traffic_simplified_colors_title">Enkla trafikfärger</string>
+	<string name="enable_logging">Aktivera loggning</string>
+	<string name="whatsnew_more_info_on_hotels_title">Mer Information om hotell</string>
+	<string name="whatsnew_more_info_on_hotels_message">Ett helt nytt utseende för hotellsidor: kolla in foton, användaromdömen och mer information online.</string>
+	<string name="whatsnew_better_routing_title">Förbättrad ruttplanering</string>
+	<string name="whatsnew_better_routing_message">• En mer exakt beräknad ankomsttid.\n• Appen tar hänsyn till begränsade områden och vägskyltar.</string>
+	<string name="whatsnew_smaller_mwm_title">Kartorna har blivit mindre</string>
+	<string name="whatsnew_smaller_mwm_message">Kartor kräver upp till 20 % mindre lagringsutrymme.</string>
+	<string name="whatsnew_waypoints_title">Vägpunkter i ruttning</string>
+	<string name="whatsnew_waypoints_message">Tryck på platser för att lägga till vägpunkter till din rutt.</string>
+	<string name="whatsnew_driving_style_title">En ny kartstil när du kör</string>
+	<string name="whatsnew_driving_style_message">Bilens navigeringsläge är lättare att använda.</string>
 </resources>
